src/preppipe/frontend/_antlr_generated/CommandParseParser.py
# Generated from CommandParse.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CommandParseParser ( Parser ):

    grammarFileName = "CommandParse.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'\\u0000'" ]

    symbolicNames = [ "<INVALID>", "WS", "ELEMENT", "COMMENTSTART", "COMMANDSTART", 
                      "COMMANDEND", "COMMANDSEP", "ASSIGNMENTOP", "COMMAOP", 
                      "QUOTEDSTR", "NATURALTEXT" ]

    RULE_value = 0
    RULE_name = 1
    RULE_kwvalue = 2
    RULE_positionals = 3
    RULE_kwargs = 4
    RULE_argumentlist = 5
    RULE_command = 6

    ruleNames =  [ "value", "name", "kwvalue", "positionals", "kwargs", 
                   "argumentlist", "command" ]

    EOF = Token.EOF
    WS=1
    ELEMENT=2
    COMMENTSTART=3
    COMMANDSTART=4
    COMMANDEND=5
    COMMANDSEP=6
    ASSIGNMENTOP=7
    COMMAOP=8
    QUOTEDSTR=9
    NATURALTEXT=10

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NATURALTEXT(self):
            return self.getToken(CommandParseParser.NATURALTEXT, 0)

        def QUOTEDSTR(self):
            return self.getToken(CommandParseParser.QUOTEDSTR, 0)

        def ELEMENT(self):
            return self.getToken(CommandParseParser.ELEMENT, 0)

        def getRuleIndex(self):
            return CommandParseParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = CommandParseParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 14
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CommandParseParser.ELEMENT) | (1 << CommandParseParser.QUOTEDSTR) | (1 << CommandParseParser.NATURALTEXT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NATURALTEXT(self):
            return self.getToken(CommandParseParser.NATURALTEXT, 0)

        def QUOTEDSTR(self):
            return self.getToken(CommandParseParser.QUOTEDSTR, 0)

        def getRuleIndex(self):
            return CommandParseParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)




    def name(self):

        localctx = CommandParseParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            _la = self._input.LA(1)
            if not(_la==CommandParseParser.QUOTEDSTR or _la==CommandParseParser.NATURALTEXT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KwvalueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(CommandParseParser.NameContext,0)


        def ASSIGNMENTOP(self):
            return self.getToken(CommandParseParser.ASSIGNMENTOP, 0)

        def value(self):
            return self.getTypedRuleContext(CommandParseParser.ValueContext,0)


        def getRuleIndex(self):
            return CommandParseParser.RULE_kwvalue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKwvalue" ):
                listener.enterKwvalue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKwvalue" ):
                listener.exitKwvalue(self)




    def kwvalue(self):

        localctx = CommandParseParser.KwvalueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_kwvalue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.name()
            self.state = 19
            self.match(CommandParseParser.ASSIGNMENTOP)
            self.state = 20
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PositionalsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandParseParser.ValueContext)
            else:
                return self.getTypedRuleContext(CommandParseParser.ValueContext,i)


        def COMMAOP(self, i:int=None):
            if i is None:
                return self.getTokens(CommandParseParser.COMMAOP)
            else:
                return self.getToken(CommandParseParser.COMMAOP, i)

        def getRuleIndex(self):
            return CommandParseParser.RULE_positionals

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPositionals" ):
                listener.enterPositionals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPositionals" ):
                listener.exitPositionals(self)




    def positionals(self):

        localctx = CommandParseParser.PositionalsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_positionals)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.value()
            self.state = 29
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 24
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==CommandParseParser.COMMAOP:
                        self.state = 23
                        self.match(CommandParseParser.COMMAOP)


                    self.state = 26
                    self.value() 
                self.state = 31
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KwargsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def kwvalue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandParseParser.KwvalueContext)
            else:
                return self.getTypedRuleContext(CommandParseParser.KwvalueContext,i)


        def COMMAOP(self, i:int=None):
            if i is None:
                return self.getTokens(CommandParseParser.COMMAOP)
            else:
                return self.getToken(CommandParseParser.COMMAOP, i)

        def getRuleIndex(self):
            return CommandParseParser.RULE_kwargs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKwargs" ):
                listener.enterKwargs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKwargs" ):
                listener.exitKwargs(self)




    def kwargs(self):

        localctx = CommandParseParser.KwargsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_kwargs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.kwvalue()
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CommandParseParser.COMMAOP) | (1 << CommandParseParser.QUOTEDSTR) | (1 << CommandParseParser.NATURALTEXT))) != 0):
                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CommandParseParser.COMMAOP:
                    self.state = 33
                    self.match(CommandParseParser.COMMAOP)


                self.state = 36
                self.kwvalue()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CommandParseParser.EOF, 0)

        def positionals(self):
            return self.getTypedRuleContext(CommandParseParser.PositionalsContext,0)


        def COMMAOP(self):
            return self.getToken(CommandParseParser.COMMAOP, 0)

        def kwargs(self):
            return self.getTypedRuleContext(CommandParseParser.KwargsContext,0)


        def getRuleIndex(self):
            return CommandParseParser.RULE_argumentlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgumentlist" ):
                listener.enterArgumentlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgumentlist" ):
                listener.exitArgumentlist(self)




    def argumentlist(self):

        localctx = CommandParseParser.ArgumentlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_argumentlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 42
                self.positionals()


            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CommandParseParser.COMMAOP:
                self.state = 45
                self.match(CommandParseParser.COMMAOP)


            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CommandParseParser.QUOTEDSTR or _la==CommandParseParser.NATURALTEXT:
                self.state = 48
                self.kwargs()


            self.state = 51
            self.match(CommandParseParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(CommandParseParser.NameContext,0)


        def COMMANDSEP(self):
            return self.getToken(CommandParseParser.COMMANDSEP, 0)

        def argumentlist(self):
            return self.getTypedRuleContext(CommandParseParser.ArgumentlistContext,0)


        def getRuleIndex(self):
            return CommandParseParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = CommandParseParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_command)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.name()
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CommandParseParser.COMMANDSEP:
                self.state = 54
                self.match(CommandParseParser.COMMANDSEP)


            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 57
                self.argumentlist()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





